# devpod

./: .aider.conf.yml  .aider.model.metadata.json  .aliasrc  .bashrc  .env.example  .gitignore  .gitmodules  .stow-local-ignore  .vimrc  .zellijrc  Dockerfile  README.md  config.json  cosign.pub  dev_env.sh  distrobox.ini  features.todo.md  flake.nix  flatpak_todo.md  flatpaks.txt  install.sh  jina.sh  migration_to_python_packages.todo.md  pyproject.toml  security_checks_plan.md  setup_vim_plugins.sh  shell.nix  starship.toml  zellijrc.sh
.bashrc.d/: jdo.bash  profile  zellij-tab.bash
.config/: alacritty.toml  starship.toml
.config/io.datasette.llm/: default_model.txt  install_llm.sh  openrouter_models.json  openrouter_models_structured_outputs.json
.config/lan-mouse/: config.toml  lan-mouse.pem
.config/mise/: config.toml
.config/zellij/: config.kdl
.github/workflows/: build.yml  docker-image.yml  docker-publish.yml  flake-update.yml  nix-vuln.yml  release.yml  security.yml
.runprompt/prompts/: bash.prompt  compiler.prompt  consultant.prompt  create_download_sh.prompt  download.prompt  estimate_today.prompt  estimate_tomorrow.prompt  estimator.prompt  find.prompt  formalizer.prompt  (+10 more)
.tools/: debian_prerequisites_install.sh  enable_services.sh  install-uv-tools.sh  install.sh  install_flatpaks.sh  install_python.sh  install_rio_terminfo.sh  install_silverblue.sh  nix-toolbox-setup.sh  setup_vim_plugins.sh  silverblue_non_essentials.sh  silverblue_prerequisites_install.sh  start_syncthing.sh
flatpaks/: flathub.txt
functions/: jina.sh
recipes/: recipe.yml
(+27 files in other folders)
