[project]
name = "dev-environment"
version = "0.1.0"
description = "Development environment with vim plugins"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aider-chat>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
